2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfptypeconv.c (___host_to_ieee_32): Fix endian macro check.
	(___host_to_ieee_64): Likewise.
	(___host_to_ieee_128): Likewise.
	(___ieee_32_to_host): Likewise.
	(___ieee_64_to_host): Likewise.
	(___ieee_128_to_host): Likewise.
	* ieee754r/fpclassifyd32.c (fpclassify): Likewise.
	* ieee754r/isinfd32.c (isinf): Likewise.
	* ieee754r/isnand32.c (isnan): Likewise.

2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* config.guess: Add powerpc LE support.
	* configure.ac: Likewise.
	* scripts/config.guess: Likewise.
	* configure: Likewise.
	* sysdeps/powerpc/powerpc64/sysdep.h: Sync with GLIBC one for powerpc
	LE support.

2012-09-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in (distclean): Add as rule to remove files generated by
	configure.

2012-08-08  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* README.user: Added new section on compliance With ISO/IEC TR 24732,
	the C++ DFP Draft Technical Report, including instructions on how to
	use (ios::fixed | ios::scientific) as ios_base::fmtflags in order to
	get fully encoded precision in output string representation.

2012-08-07  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* tests/test-printf.c: Add missing 'D' to a/A conv tests.
	* tests/scaffold.c: Correct comments for _OSC and added a/A support.
	* tests/test-ostream.cpp: Modified expectations such that a/A ignores
	precision and always uses the num of significant digits in the
	mantissa when output.
	* tests/test-ostream-g-spec.cpp: Removed unnecessary define that used
	to be used to get g/G support.
	* dfp/decimal/decimal (FIND_DEC_MANT_DIG): Remove ".*" from default
	string string.
	(LIBDFP_META): Make g/G spec default. Enable a/A spec by checking
	flags for ios::fixed | ios::scientific. Condense uppercase/lowercase
	check. Don't call printf with a precision specifier if a/A is the
	desires spec conv.

2012-07-27  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
