@@ -56,8 +56,10 @@ INTERNAL_FUNCTION_NAME (DEC_TYPE x)
 #endif
 
   /* a NaN is not Inf, but the bitmasks overlap, so extract everything for NaN
-   * and if there are more bits than DECIMAL_Inf it is a NaN and not an Inf.  */
-  return (top_byte & DECIMAL_NaN) == DECIMAL_Inf;
+     and if there are more bits than DECIMAL_Inf it is a NaN and not an Inf.
+     Return -1 for -INF and 1 for +INF.  */
+  return (top_byte & DECIMAL_NaN) == DECIMAL_Inf ?
+    (top_byte & 0x80 ? -1 : 1) : 0;
 }
 
 weak_alias (INTERNAL_FUNCTION_NAME, EXTERNAL_FUNCTION_NAME)
