@@ -1,7 +1,7 @@
 /* _Decimal32 isinf classification function.
 
    Copyright (C) 2006 IBM Corporation.
-   Copyright (C) 2010 Free Software Foundation, Inc.
+   Copyright (C) 2010-2014 Free Software Foundation, Inc.
 
    This file is part of the Decimal Floating Point C Library.
 
@@ -24,6 +24,8 @@
 
    Please see libdfp/COPYING.txt for more information.  */
 
+#include <stdio.h>
+
 #ifndef _DECIMAL_SIZE
 #  define _DECIMAL_SIZE 32
 #endif
@@ -37,17 +39,25 @@
 int
 INTERNAL_FUNCTION_NAME (DEC_TYPE x)
 {
-  int result = 0;
-  __asm__(	"dtstdc cr0,%1,0x04;"
-		"li %0,0;"
-		"bne cr0,1f;"
-		"li %0,1;"
-		"bnl cr0,1f;"
-		"neg %0,%0;"
-	"1:;"
-	: "=r" (result): "f" ((_Decimal64) x): "cr0");
+  int cr0;
+#if _DECIMAL_SIZE == 32 || _DECIMAL_SIZE == 64
+#define DTSTD "dtstdc"
+  _Decimal64 input = x;
+#elif _DECIMAL_SIZE == 128
+# define DTSTD "dtstdcq"
+  register _Decimal128 input asm("fr0") = x;
+#endif
 
-  return result;
+  asm (DTSTD " cr0,%1,0x04\n"
+       "mfcr   %0, 0\n"
+       : "=r" (cr0)
+       : "f" (input)
+       : "cr0");
+
+  /* cr0 bits are 28:31 and:
+     - 0010 operand positive with match
+     - 1010 operand negative with math  */
+  return (cr0 & 0x20000000) ? (cr0 & 0x80000000 ? -1 : 1) : 0;
 }
 
 weak_alias (INTERNAL_FUNCTION_NAME, EXTERNAL_FUNCTION_NAME)
