@@ -1,3 +1,14 @@
+2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* ieee754r/isinfd32.c (__isinfd32): Return -1 for minus infinity and
+	+1 for plus infinity.
+	* sysdeps/powerpc/dfpu/isinfd128.c (__isinfd128): Use the isinfd32.c
+	implementation instead of the is_template.h.
+	* sysdeps/powerpc/dfpu/isinfd32.c (__isinfd32): Simplify
+	implementation by checking cr1 result and result -1 for minus infinity
+	and +1 for plus infinity.
+	* tests/test-isinf.c: Add check for minux infinity.
+
 2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	* dfptypeconv.c (___host_to_ieee_32): Fix endian macro check.
